--- a/app/views/upload_files/index.html.erb
+++ b/app/views/upload_files/index.html.erb
@@ -1,1 +1,5 @@
 <h1>Word Frequency</h1>
+<%= form_tag '/word_count', multipart: true do %>
+  <label for="file">File to Upload</label> <%= file_field_tag "file" %>
+  <%= submit_tag 'Upload'%>
+<% end %>
