ajax file submission complete

--- a/app/views/upload_files/index.html.erb
+++ b/app/views/upload_files/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Word Frequency</h1>
-<%= form_tag '/word_count', multipart: true do %>
+<%= form_tag '/word_count', multipart: true ,id: 'file_upload' do %>
   <label for="file">File to Upload</label> <%= file_field_tag "file" %>
   <%= submit_tag 'Upload'%>
 <% end %>
+<%= image_tag 'ajax-loader.gif', alt: 'loader', id: 'loader'%>
+<div id="graph"></div>
