moved loader gif to graph div

--- a/app/views/upload_files/index.html.erb
+++ b/app/views/upload_files/index.html.erb
@@ -7,6 +7,4 @@
   <%= submit_tag 'Upload'%>
 <% end %>
 
-<%= image_tag 'ajax-loader.gif', alt: 'loader', id: 'loader'%>
-
-<div id="graph"></div>
+<div id="graph"><%= image_tag 'ajax-loader.gif', alt: 'loader', id: 'loader'%></div>
