--- a/app/views/upload_files/index.html.erb
+++ b/app/views/upload_files/index.html.erb
@@ -1,10 +1,10 @@
-<%=javascript_include_tag "http://d3js.org/d3.v3.min.js"%>
-
 <h1>Word Frequency</h1>
 
 <%= form_tag '/word_count', multipart: true ,id: 'file_upload' do %>
   <label for="file">File to Upload</label> <%= file_field_tag "file" %>
-  <%= submit_tag 'Upload'%>
+  <%= submit_tag 'Upload', disabled: 'disabled'%>
 <% end %>
 
 <div id="graph"><%= image_tag 'ajax-loader.gif', alt: 'loader', id: 'loader'%></div>
+
+<%=javascript_include_tag "http://d3js.org/d3.v3.min.js"%>
